BUG FIX for annotations not being removed from view when media is changed